--- a/templates/log-list.html
+++ b/templates/log-list.html
@@ -1,41 +1,85 @@
 <html>
   <head>
     <title>Logs for: {{ job.name }}</title>
-    <link rel="stylesheet" type="text/css" href="/static/style.css" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
+
+    <title>Cronitor</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="http://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="http://getbootstrap.com/examples/starter-template/starter-template.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="http://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
   </head>
   <body>
-    <h1>Logs for: {{ job.name }}</h1>
-    <table class="log_list">
-      <tr>
-        <th>Timestamp</th>
-        <th>Status</th>
-        <th>Log</th>
-      </tr>
-      {% if job.is_overdue %}
-      <tr>
-        <td colspan="3" class="job_overdue_warning">
-          This job is overdue by {{ job.is_overdue }}.
-        </td>
-      </tr>
-      {% end %}
-      {% for entry in job.log_entries %}
-      <tr class="job_{{entry.status}}">
-        <td>{{ entry.timestamp }}</td>
-        <td>{{ entry.status }}</td>
-        <td><a href="{{ url_escape(entry.timestamp.isoformat()) }}">log</a></td>
-      </tr>
-      {% end %}
-    </table>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Cronitor Job Dashboard</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <!-- <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li> -->
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
 
-    <table class="config">
-      <tr>
-        <th>New logs expected every:</th>
-        <td>{{ job.rules.due_every }}</td>
-      </tr>
-      <tr>
-        <th>Logs deleted after:</th>
-        <td>{{ job.rules.keep }}</td>
-      </tr>
-    </table>
+    <div class="container">
+      <h1>Logs for: {{ job.name }}</h1>
+      <table class="table">
+        <tr>
+          <th>Timestamp</th>
+          <th>Status</th>
+          <th>Log</th>
+        </tr>
+        {% if job.is_overdue %}
+        <tr>
+          <td colspan="3" class="job_overdue_warning">
+            This job is overdue by {{ job.is_overdue }}.
+          </td>
+        </tr>
+        {% end %}
+        {% for entry in job.log_entries %}
+        <tr class="job_{{entry.status}}">
+          <td>{{ entry.timestamp }}</td>
+          <td>{{ entry.status }}</td>
+          <td><a href="{{ url_escape(entry.timestamp.isoformat()) }}">log</a></td>
+        </tr>
+        {% end %}
+      </table>
+
+      <table class="config">
+        <tr>
+          <th>New logs expected every:</th>
+          <td>{{ job.rules.due_every }}</td>
+        </tr>
+        <tr>
+          <th>Logs deleted after:</th>
+          <td>{{ job.rules.keep }}</td>
+        </tr>
+      </table>
+    </div>
   </body>
 </html>
