--- a/templates/log-list.html
+++ b/templates/log-list.html
@@ -65,7 +65,7 @@
         <tr class="job_{{entry.status}}">
           <td>{{ entry.timestamp }}</td>
           <td>{{ entry.status }}</td>
-          <td><a href="{{ url_escape(entry.timestamp.isoformat()) }}">log</a></td>
+          <td><a href="{{ url_escape(entry.timestamp.isoformat()) }}">LOGFILE</a></td>
         </tr>
         {% end %}
       </table>
