--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,18 @@
+th {
+  cursor: pointer;
+}
+
+#myInput {
+  /*background-image: url('/css/searchicon.png');*/
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
+
 .job_ok {
   color: #3c763d;
   background-color: #dff0d8;
