--- a/templates/log.html
+++ b/templates/log.html
@@ -9,8 +9,6 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>Cronitor</title>
-
     <!-- Bootstrap core CSS -->
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -53,7 +51,7 @@
     </nav>
 
     <div class="container">
-      <h1>Logs for: {{ entry.timestamp }}</h1>
+      <h1>Logs for: {{ entry.job.name }}</h1>
       <table class="table">
         <tr>
           <th>Command:</th>
