--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
 
     <title>Cronitor</title>
 
@@ -57,6 +58,44 @@
             }
         }
     </script>
+    <style type="text/css">
+        th {
+            cursor: pointer;
+        }
+    </style>
+
+    <style>
+      #myInput {
+        /*background-image: url('/css/searchicon.png');*/
+        background-position: 10px 10px;
+        background-repeat: no-repeat;
+        width: 100%;
+        font-size: 16px;
+        padding: 12px 20px 12px 40px;
+        border: 1px solid #ddd;
+        margin-bottom: 12px;
+      }
+
+      /*#myTable {
+        border-collapse: collapse;
+        width: 100%;
+        border: 1px solid #ddd;
+        font-size: 18px;
+      }
+
+      #myTable th, #myTable td {
+        text-align: left;
+        padding: 12px;
+      }
+
+      #myTable tr {
+        border-bottom: 1px solid #ddd;
+      }
+
+      #myTable tr.header, #myTable tr:hover {
+        background-color: #f1f1f1;
+      }*/
+      </style>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -122,8 +161,6 @@
     <script src="../../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
-<<<<<<< 1ab082c13f31cd7a68f4fc259d18ef4063038eb7
-=======
     <script>
       function myFunction() {
         var input, filter, table, tr, td, i;
@@ -143,6 +180,5 @@
         }
       }
       </script>
->>>>>>> CHANGE Name for logfiles
   </body>
 </html>
